--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,20 @@
 <resources>
     <string name="app_name">Delivery Assistant</string>
+    <string-array name="languages">
+        <item>🇬🇧 English</item>
+        <item>🇫🇷 Français</item>
+        <item>🇩🇿 العربية</item>
+    </string-array>
     <string name="orders">Orders</string>
     <string name="you_ve">You\'ve got&#160;</string>
     <string name="order_left">&#160;order left.</string>
     <string name="orders_left">&#160;orders left.</string>
     <string name="delivery_is_delayed_by_48_hours">&#160;delivery is delayed by 48 hours!</string>
     <string name="deliveries_are_delayed_by_48_hours">&#160;deliveries are delayed by 48 hours!</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="or">Or</string>
+    <string name="log_in">Log in</string>
+    <string name="email">Email</string>
 </resources>
