--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="delivery_is_delayed_by_48_hours">&#160;delivery is delayed by 48 hours!</string>
     <string name="deliveries_are_delayed_by_48_hours">&#160;deliveries are delayed by 48 hours!</string>
     <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="log_in_with_google">Log in with Google</string>
     <string name="or">Or</string>
     <string name="log_in">Log in</string>
     <string name="email">Email</string>
+    <string name="delivery_assistant">DELIVERY ASSISTANT</string>
 </resources>
